--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+"homepage": "https://spoorti-rtl.github.io/myportfolio",
 {
   "name": "myportfolio",
   "version": "0.1.0",
@@ -13,11 +14,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
